Tweak initial display of panel to prevent flickering

--- a/chrome/skin/default/zotero/overlay.css
+++ b/chrome/skin/default/zotero/overlay.css
@@ -557,5 +557,5 @@ toolbar[iconsize="small"] #zotero-toolbar-button:active {
 
 #zotero-save-panel {
 	width: 340px;
-	height: 520px;
+	height: 451px;
 }
